--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tbd",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "nodemon ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
