--- a/package.json
+++ b/package.json
@@ -22,9 +22,19 @@
     "express": "^4.14.1",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.30.1"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
+    "react-tap-event-plugin": "^2.0.1",
+    "sequelize": "^3.30.1",
+    "validator": "^6.2.1"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "nodemon": "^1.11.0",
+    "webpack": "^2.2.1"
   }
 }
